Fixes issue 1 (#2)
* Fixed ratings not showing for titleCards, having progress bar

* Fixed imdbRating sticking to the title when card expands upon hover

This only happens for cards, which shows progress bar instead of meta

--- a/app/stylesheets/contentscript.css
+++ b/app/stylesheets/contentscript.css
@@ -4,6 +4,10 @@
 	color: #fff;
 }
 
+.bob-card .bob-title .imdbRating{
+	margin-left: .333vw !important;
+}
+
 .bob-card .imdbRating,
 .bob-card .rtRating,
 .bob-card .metacriticRating {
